# idx-mcp-server

./: .env.example  .gitignore  Cargo.toml  README.md
.claude/: 01-architecture.md  01-index.md  02-data-contract.md  02-quickstart.md  03-mcp-server.md  03-sources.md  04-architecture.md  05-data-contract.md  05-implementation-plan.md  06-code-review.md  06-sources.md  07-implementation-plan.md  08-code-review.md  09-scenario-qa.md  10-tool-run-query.md  11-tool-describe-schema.md  12-tool-screen-stocks.md  13-tool-search-tickers.md  14-tool-get-company.md  15-tool-get-prices.md  16-tool-get-broker-activity.md  17-tool-get-ownership.md  18-tool-get-announcements.md  19-tool-get-filing.md  llms.txt  mcp-server.md  quickstart.md  scenario-corpus.json
.claude/tools/: describe-schema.md  get-announcements.md  get-broker-activity.md  get-company.md  get-ownership.md  get-prices.md  run-query.md  screen-stocks.md  search-tickers.md
.github/workflows/: ci.yml  release.yml
scripts/: e2e.sh
src/: analytics.rs  auth.rs  catalog.rs  config.rs  filings.rs  keys.rs  main.rs  oauth.rs  server.rs  store.rs
